# claude-code-im-channel

./: .gitignore  README.md  README.zh.md  config.example.yaml  pyproject.toml
deploy/: install.sh  restart.sh
src/im_claude_channel/: __init__.py  __main__.py  access.py  claude_runner.py  commands.py  config.py  importer.py  quota.py  server.py  session_store.py
src/im_claude_channel/adapters/: __init__.py  base.py  discord.py  feishu.py  telegram.py
systemd/: im-claude-channel.service
